[WIP] fix even more tests
Signed-off-by: David Thompson <davthomp@redhat.com>